syntax="proto3";
package fixbug;

option cc_generic_services=true;
message ResultCode{
    int32 errcode=1; //等于0，调用成功
    bytes errmsg=2;  //调用失败返回的信息
}

message GetFriendsListRequest{
    uint32 userid=1;
}

message GetFriendsListResponse{
    ResultCode result=1;
    repeated bytes friends=2;
}

service FriendServiceRpc{
    rpc GetfriendList(GetFriendsListRequest) returns(GetFriendsListResponse);
}